--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-Hi there!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Resume</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #f4f4f4;
+        }
+        img {
+            width: auto;
+            height: auto;
+        }
+    </style>
+</head>
+<body>
+    <img src="resume.svg" alt="Resume">
+</body>
+</html>
