Recursive build script

--- a/index.html
+++ b/index.html
@@ -4,20 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
-    <style>
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: #f4f4f4;
-        }
-        img {
-            width: auto;
-            height: auto;
-        }
-    </style>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <img src="resume.svg" alt="Resume">
+    <div class="container">
+        <div class="background"></div>
+<div class="header">
+    <div class="background"></div>
+    <h1>Alexander George Padula</h1>
+    <div>
+        <a href="https://github.com/PadLex" target="_blank">
+            <img src="/icons/linkedin.svg" alt="LinkedIn">
+            github.com/PadLex
+        </a>
+
+        <a href="https://www.linkedin.com/in/alexander-padula-8a0a3b138/" target="_blank">
+            <img src="/icons/linkedin.svg" alt="LinkedIn">
+            Profile
+        </a>
+    </div>
+</div>
+        <div>
+    <h1>EDUCATION</h1>
+
+</div>
+        <div class="header">
+    <h1>EDUCATION</h1>
+
+</div>
+        <div class="header">
+    <h1>EDUCATION</h1>
+
+</div>
+        <div>
+    <h1>EDUCATION</h1>
+
+</div>
+        <div class="header">
+    <h1>EDUCATION</h1>
+
+</div>
+        <div class="header">
+    <h1>EDUCATION</h1>
+
+</div>
+        <div class="header">
+    <h1>EDUCATION</h1>
+
+</div>
+
+
+    </div>
 </body>
 </html>
