Infill data from resume json

--- a/index.html
+++ b/index.html
@@ -8,52 +8,159 @@
 </head>
 <body>
     <div class="container">
-        <div class="background"></div>
-<div class="header">
-    <div class="background"></div>
-    <h1>Alexander George Padula</h1>
-    <div>
-        <a href="https://github.com/PadLex" target="_blank">
-            <img src="/icons/linkedin.svg" alt="LinkedIn">
-            github.com/PadLex
-        </a>
-
-        <a href="https://www.linkedin.com/in/alexander-padula-8a0a3b138/" target="_blank">
-            <img src="/icons/linkedin.svg" alt="LinkedIn">
-            Profile
-        </a>
+        <div class="header">
+            <h1>Alexander George Padula</h1>
+            <div><a href="https://www.linkedin.com/in/alexander-padula-8a0a3b138/" target="_blank">
+    <img src="/icons/linkedin.svg" alt="">
+    Profile
+</a>
+<a href="https://github.com/PadLex" target="_blank">
+    <img src="/icons/github.svg" alt="">
+    github.com/PadLex
+</a>
+<a href="mailto: alexander.geroge.padula@gmail.com" target="_blank">
+    <img src="/icons/mail.svg" alt="">
+    alexander.geroge.padula@gmail.com
+</a></div>
+        </div>
+        <div class="horizontal">
+            <div>
+                <h2>EDUCATION</h2>
+                <div class="vertical">
+    <div class="horizontal">
+        <div>MSc Computer Science</div>
+        <div>(ML major)</div>
     </div>
+    <div class="horizontal">
+        <div>ETH Zurich</div>
+        <div>2024 - current</div>
+    </div>
+    <div></div>
 </div>
-        <div>
-    <h1>EDUCATION</h1>
-
+<div class="vertical">
+    <div class="horizontal">
+        <div>BSc Data Science and AI</div>
+        <div></div>
+    </div>
+    <div class="horizontal">
+        <div>Maastricht University</div>
+        <div>2021 - 2024</div>
+    </div>
+    <div>9.0 (Dutch) / 4.33 (US) - Top 2%</div>
 </div>
-        <div class="header">
-    <h1>EDUCATION</h1>
-
+            </div>
+            <div>
+                <h2>LANGUAGES</h2>
+                <div class="horizontal">
+    <div>English</div>
+    <div>Native</div>
 </div>
-        <div class="header">
-    <h1>EDUCATION</h1>
-
+<div class="horizontal">
+    <div>Italian</div>
+    <div>Native</div>
 </div>
-        <div>
-    <h1>EDUCATION</h1>
-
+            </div>
+            <div>
+                <h2>SKILLS</h2>
+                <div class="horizontal">
+    <div>Python</div>
+    <div>(PyTorch, TF)</div>
 </div>
-        <div class="header">
-    <h1>EDUCATION</h1>
-
+<div class="horizontal">
+    <div>C</div>
+    <div>(CUDA)</div>
 </div>
-        <div class="header">
-    <h1>EDUCATION</h1>
-
+<div class="horizontal">
+    <div>React & Node.js</div>
+    <div></div>
 </div>
-        <div class="header">
-    <h1>EDUCATION</h1>
-
+<div class="horizontal">
+    <div>C#</div>
+    <div>(Unity)</div>
 </div>
-
-
+<div class="horizontal">
+    <div>Java</div>
+    <div></div>
+</div>
+            </div>
+        </div>
+        <div class="vertical">
+            <div>
+                <h2>PUBLICATIONS</h2>
+                <div class="vertical">
+    <div class="horizontal">
+        <div>GAVEL: Generating Games Via Evolution and Language Models</div>
+        <div>2nd Author  NeurIPS 2024</div>
+    </div>
+    <div>Designed a system to generate novel board games using a DSL and an LLM as a mutation operator. Automated evaluation through playthrough sampling between general game-playing agents, with heuristics to score runs.</div>
+</div>
+<div class="vertical">
+    <div class="horizontal">
+        <div>Exploring RL-based LLM Training for Formal Language Tasks</div>
+        <div>1st Author  BNAIC 2024</div>
+    </div>
+    <div>Explored adapting PPO implementations designed for RLHF to instead train LLMs using rewards from explicitly programmed functions, such as evaluating whether a generated program executes correctly.</div>
+</div>
+            </div>
+            <div>
+                <h2>PROFESSIONAL EXPERIENCE</h2>
+                <div class="vertical">
+    <div class="horizontal">
+        <div>Apple - Research Internship - Front-end & Deep Learning</div>
+        <div>Seattle, USA  July 2024 - Sep 2024</div>
+    </div>
+    <div>Developed a prototype and authored an internal paper. Presented research to 100+ employees across departments, gaining traction with potential to impact the next product cycle.</div>
+</div>
+<div class="vertical">
+    <div class="horizontal">
+        <div>Maastricht University - Honors Program - Deep Learning</div>
+        <div>Maastricht, NL  Sep 2022 - Sep 2023</div>
+    </div>
+    <div>Developed Game Smith, a coding assistant for the Ludii DSL. Trained an LLM and overcame a limited dataset by building a specialized compiler to truncate partially invalid completions and guarantee compilability.</div>
+</div>
+<div class="vertical">
+    <div class="horizontal">
+        <div>Maastricht University - TA & Tutor - Computer Science</div>
+        <div>Maastricht, NL  Nov 2021 - July 2024</div>
+    </div>
+    <div>Covered tuition and rent by serving as a university teaching assistant and tutoring privately in computer science.</div>
+</div>
+<div class="vertical">
+    <div class="horizontal">
+        <div>Vivid Vision - Contract Work - Front-end - $$topic$$</div>
+        <div>Remote  Jun 2021 - Oct 2021</div>
+    </div>
+    <div>Built web interface currently used for glaucoma patients and their doctors to manage data and display test results. Worked with founders and dev team. Limited technical debt and managed state across complex React applications.</div>
+</div>
+<div class="vertical">
+    <div class="horizontal">
+        <div>CELI Language Technology - Internship - Deep Learning - $$topic$$</div>
+        <div>Turin, IT  Nov 2018 - Aug 2019</div>
+    </div>
+    <div>Developed and deployed a tagless image search engine. Mentored by Dr. Bolioli’s team, I trained BERT and Inception V3 to embed images and descriptions in a shared latent space. This project underpinned my high school thesis.</div>
+</div>
+            </div>
+            <div>
+                <h2>PROJECTS</h2>
+                <div class="vertical">
+    <div class="horizontal">
+        <div>EDMO</div>
+        <div>Maastricht, NL  Sep 2023 - Feb 2024</div>
+    </div>
+    <div>Designed novel data-passthrough joints and contributed to a ML algorithm for inferring a robot’s configuration.</div>
+</div>
+<div class="vertical">
+    <div class="horizontal">
+        <div>Open-source Laser Cutting Tool</div>
+        <div>Treviso, IT  Jan 2020 - Jan 2021</div>
+    </div>
+    <div>Built 3D printer and transformed it into a DIY laser cutter. Developed the open-source Python library svg-to-gcode. The tool’s GUI has garnered over 13,000 downloads and a community that helps maintain it.</div>
+</div>
+            </div>
+            <div class="horizontal" style="justify-content: left; align-items: end">
+                <h2>PASSIONATE</h2>
+                Hiking, Rock Climbing, Cooking, and Robotics
+            </div>
     </div>
 </body>
 </html>
