--- a/index_src.html
+++ b/index_src.html
@@ -10,38 +10,38 @@
     <div class="container">
         <div class="header">
             <h1>$$name$$</h1>
-            <div>$$info$$</div>
+            <div>%%info%%</div>
         </div>
         <div class="horizontal">
             <div>
                 <h2>EDUCATION</h2>
-                $$education$$
+                %%education%%
             </div>
             <div>
                 <h2>LANGUAGES</h2>
-                $$languages$$
+                %%languages%%
             </div>
             <div>
                 <h2>SKILLS</h2>
-                $$skills$$
+                %%skills%%
             </div>
         </div>
         <div class="vertical">
             <div>
                 <h2>PUBLICATIONS</h2>
-                $$publications$$
+                %%publications%%
             </div>
             <div>
-                <h2>EXPERIENCE</h2>
-                $$experience$$
+                <h2>PROFESSIONAL EXPERIENCE</h2>
+                %%experience%%
             </div>
             <div>
                 <h2>PROJECTS</h2>
-                $$projects$$
+                %%projects%%
             </div>
-            <div>
-                <h2>PASSIONS</h2>
-                $$passions$$
+            <div class="horizontal" style="justify-content: left; align-items: end">
+                <h2>PASSIONATE</h2>
+                $$passionate$$
             </div>
     </div>
 </body>
