MVP template resume

--- a/index.html
+++ b/index.html
@@ -10,156 +10,259 @@
     <div class="container">
         <div class="header">
             <h1>Alexander George Padula</h1>
-            <div><a href="https://www.linkedin.com/in/alexander-padula-8a0a3b138/" target="_blank">
-    <img src="/icons/linkedin.svg" alt="">
-    Profile
-</a>
-<a href="https://github.com/PadLex" target="_blank">
-    <img src="/icons/github.svg" alt="">
-    github.com/PadLex
-</a>
-<a href="mailto: alexander.geroge.padula@gmail.com" target="_blank">
-    <img src="/icons/mail.svg" alt="">
-    alexander.geroge.padula@gmail.com
-</a></div>
+            <div class="horizontal medium_margin"><div style="display: inline-flex; align-items: center; text-decoration: none;">
+    <img src="/icons/mail.svg" alt="" style="width: 17px; height: 17px; margin-right: 5px;">
+    alexander.george.padula@gmail.com
+</div>
+<div style="display: inline-flex; align-items: center; text-decoration: none;">
+    <img src="/icons/github.svg" alt="" style="width: 17px; height: 17px; margin-right: 5px;">
+    <a href='https://github.com/PadLex' target='_blank'>github.com/PadLex</a>
+</div>
+<div style="display: inline-flex; align-items: center; text-decoration: none;">
+    <img src="/icons/linkedin.svg" alt="" style="width: 17px; height: 17px; margin-right: 5px;">
+    <a href='https://www.linkedin.com/in/alexander-padula-8a0a3b138/' target='_blank'>Profile</a>
+</div>
+<div style="display: inline-flex; align-items: center; text-decoration: none;">
+    <img src="/icons/passport.svg" alt="" style="width: 17px; height: 17px; margin-right: 5px;">
+    EU & US Citizen
+</div></div>
+            <div class="small_margin"></div>
         </div>
-        <div class="horizontal">
+        <div class="middle horizontal large_margin">
             <div>
                 <h2>EDUCATION</h2>
-                <div class="vertical">
+                <div class="vertical medium_margin">
     <div class="horizontal">
-        <div>MSc Computer Science</div>
+        <div class="title">MSc Computer Science</div>
         <div>(ML major)</div>
     </div>
     <div class="horizontal">
-        <div>ETH Zurich</div>
+        <div><span class='highlight'>ETH Zurich</span></div>
         <div>2024 - current</div>
     </div>
     <div></div>
 </div>
-<div class="vertical">
+<div class="vertical medium_margin">
     <div class="horizontal">
-        <div>BSc Data Science and AI</div>
+        <div class="title">BSc Data Science and AI</div>
         <div></div>
     </div>
     <div class="horizontal">
         <div>Maastricht University</div>
         <div>2021 - 2024</div>
     </div>
-    <div>9.0 (Dutch) / 4.33 (US) - Top 2%</div>
+    <div><span class='highlight'>Summa Cum Laude</span>, GPA: 9.0 ≈ 4.0 (USA)</div>
 </div>
             </div>
             <div>
                 <h2>LANGUAGES</h2>
+                <div class="medium_margin"></div>
                 <div class="horizontal">
-    <div>English</div>
-    <div>Native</div>
+    <div>
+        <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
+        English
+    </div>
+    <div>(Native)</div>
 </div>
 <div class="horizontal">
-    <div>Italian</div>
-    <div>Native</div>
+    <div>
+        <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
+        Italian
+    </div>
+    <div>(Native)</div>
 </div>
             </div>
             <div>
                 <h2>SKILLS</h2>
+                <div class="medium_margin"></div>
                 <div class="horizontal">
-    <div>Python</div>
-    <div>(PyTorch, TF)</div>
+    <div>
+        <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
+        Python
+    </div>
+    <div>(<span class='highlight'>PyTorch</span>, TF)</div>
 </div>
 <div class="horizontal">
-    <div>C</div>
-    <div>(CUDA)</div>
+    <div>
+        <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
+        JS
+    </div>
+    <div>(React, Node.js)</div>
 </div>
 <div class="horizontal">
-    <div>React & Node.js</div>
-    <div></div>
+    <div>
+        <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
+        C
+    </div>
+    <div>(<span class='highlight'>CUDA</span>)</div>
 </div>
 <div class="horizontal">
-    <div>C#</div>
+    <div>
+        <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
+        Java
+    </div>
+    <div>(Reflection)</div>
+</div>
+<div class="horizontal">
+    <div>
+        <img src="/icons/dot.svg" alt="" style="width: 4px; height: 4px; margin-bottom: 2.5px; margin-right: 6px;">
+        C#
+    </div>
     <div>(Unity)</div>
-</div>
-<div class="horizontal">
-    <div>Java</div>
-    <div></div>
 </div>
             </div>
         </div>
-        <div class="vertical">
-            <div>
+        <div class="bottom vertical">
+            <div class="large_margin">
                 <h2>PUBLICATIONS</h2>
-                <div class="vertical">
+                <div class="vertical medium_margin">
     <div class="horizontal">
-        <div>GAVEL: Generating Games Via Evolution and Language Models</div>
-        <div>2nd Author  NeurIPS 2024</div>
+        <div class="title">GAVEL: Generating Games Via Evolution and Language Models</div>
+        <div>
+            <span style="margin-right: 10px">2nd Author</span>
+            <span><span class='highlight'>NeurIPS 2024</span></span>
+        </div>
     </div>
-    <div>Designed a system to generate novel board games using a DSL and an LLM as a mutation operator. Automated evaluation through playthrough sampling between general game-playing agents, with heuristics to score runs.</div>
+    <div class="small_margin">Designed a system to generate novel board games in a DSL using a LLM as a mutation operator. Automated evaluation through play-through sampling between general game-playing agents, with heuristics to score runs.</div>
 </div>
-<div class="vertical">
+<div class="vertical medium_margin">
     <div class="horizontal">
-        <div>Exploring RL-based LLM Training for Formal Language Tasks</div>
-        <div>1st Author  BNAIC 2024</div>
+        <div class="title">Exploring RL-based LLM Training for Formal Language Tasks</div>
+        <div>
+            <span style="margin-right: 10px">1st Author</span>
+            <span>BNAIC 2024</span>
+        </div>
     </div>
-    <div>Explored adapting PPO implementations designed for RLHF to instead train LLMs using rewards from explicitly programmed functions, such as evaluating whether a generated program executes correctly.</div>
+    <div class="small_margin">For my BSc thesis, I explored whether existing PPO implementations designed for RLHF could instead train LLMs using rewards from explicitly programmed functions - e.g., quantifying if a generated program is efficient and correct.</div>
 </div>
             </div>
-            <div>
+            <div class="large_margin">
                 <h2>PROFESSIONAL EXPERIENCE</h2>
-                <div class="vertical">
+                <div class="vertical medium_margin">
     <div class="horizontal">
-        <div>Apple - Research Internship - Front-end & Deep Learning</div>
-        <div>Seattle, USA  July 2024 - Sep 2024</div>
+        <span>
+            <span class="title"><img src="icons/apple.svg" alt="" style="width: auto; height: 16px; margin-right: 0px; margin-top: -4px;"> <span class='highlight'>Apple</span></span>
+            <span>- Research Internship - Front-end & Deep Learning</span>
+        </span>
+        <div>
+            <span style="margin-right: 10px">Seattle, USA</span>
+            <span>July 2024 - Sep 2024</span>
+        </div>
     </div>
-    <div>Developed a prototype and authored an internal paper. Presented research to 100+ employees across departments, gaining traction with potential to impact the next product cycle.</div>
+    <div class="small_margin">Authored an internal paper and developed a prototype. Presented research to 60+ employees, gaining traction across departments with the potential to impact the next product cycle. Learned how to share complex ideas concisely.</div>
+<!--    <div class="small_margin collapsable">This is a test</div>-->
 </div>
-<div class="vertical">
+<div class="vertical medium_margin">
     <div class="horizontal">
-        <div>Maastricht University - Honors Program - Deep Learning</div>
-        <div>Maastricht, NL  Sep 2022 - Sep 2023</div>
+        <span>
+            <span class="title">Maastricht University</span>
+            <span>- Honors Program - Deep Learning</span>
+        </span>
+        <div>
+            <span style="margin-right: 10px">Maastricht, NL</span>
+            <span>Sep 2022 - Sep 2023</span>
+        </div>
     </div>
-    <div>Developed Game Smith, a coding assistant for the Ludii DSL. Trained an LLM and overcame a limited dataset by building a specialized compiler to truncate partially invalid completions and guarantee compilability.</div>
+    <div class="small_margin">Developed Game Smith, a coding assistant for the Ludii DSL. Trained a LLM and overcome data scarcity using grammar-contrained decoding; developed compiler for incomplete code that sequentially excludes illegal tokens.</div>
+<!--    <div class="small_margin collapsable">$$extended$$</div>-->
 </div>
-<div class="vertical">
+<div class="vertical medium_margin">
     <div class="horizontal">
-        <div>Maastricht University - TA & Tutor - Computer Science</div>
-        <div>Maastricht, NL  Nov 2021 - July 2024</div>
+        <span>
+            <span class="title">Maastricht University</span>
+            <span>- TA & Tutor - Computer Science</span>
+        </span>
+        <div>
+            <span style="margin-right: 10px">Maastricht, NL</span>
+            <span>Nov 2021 - July 2024</span>
+        </div>
     </div>
-    <div>Covered tuition and rent by serving as a university teaching assistant and tutoring privately in computer science.</div>
+    <div class="small_margin">Covered tuition and rent by serving as a university teaching assistant and tutoring privately in computer science.</div>
+<!--    <div class="small_margin collapsable">$$extended$$</div>-->
 </div>
-<div class="vertical">
+<div class="vertical medium_margin">
     <div class="horizontal">
-        <div>Vivid Vision - Contract Work - Front-end - $$topic$$</div>
-        <div>Remote  Jun 2021 - Oct 2021</div>
+        <span>
+            <span class="title">Vivid Vision</span>
+            <span>- Contract Work - Front-end</span>
+        </span>
+        <div>
+            <span style="margin-right: 10px">Remote</span>
+            <span>Jun 2021 - Oct 2021</span>
+        </div>
     </div>
-    <div>Built web interface currently used for glaucoma patients and their doctors to manage data and display test results. Worked with founders and dev team. Limited technical debt and managed state across complex React applications.</div>
+    <div class="small_margin">Built web interface currently used by glaucoma patients and their doctors to manage data and view test results. Worked with founders and dev team. Limited technical debt and managed state across complex React applications.</div>
+<!--    <div class="small_margin collapsable">$$extended$$</div>-->
 </div>
-<div class="vertical">
+<div class="vertical medium_margin">
     <div class="horizontal">
-        <div>CELI Language Technology - Internship - Deep Learning - $$topic$$</div>
-        <div>Turin, IT  Nov 2018 - Aug 2019</div>
+        <span>
+            <span class="title">CELI Language Technology</span>
+            <span>- Internship - Deep Learning</span>
+        </span>
+        <div>
+            <span style="margin-right: 10px">Turin, IT</span>
+            <span>Nov 2018 - Aug 2019</span>
+        </div>
     </div>
-    <div>Developed and deployed a tagless image search engine. Mentored by Dr. Bolioli’s team, I trained BERT and Inception V3 to embed images and descriptions in a shared latent space. This project underpinned my high school thesis.</div>
+    <div class="small_margin">Built and deployed a content-based image search engine. Mentored by Dr. Bolioli’s team, I trained BERT and Inception V3 to embed images and descriptions in a shared latent space. This project underpinned my high school thesis.</div>
+<!--    <div class="small_margin collapsable">$$extended$$</div>-->
+</div>
+<div class="vertical medium_margin">
+    <div class="horizontal">
+        <span>
+            <span class="title">Programize LLC</span>
+            <span>- Internship - Full-stack</span>
+        </span>
+        <div>
+            <span style="margin-right: 10px">Athens, GR</span>
+            <span>Aug 2018 - Sep 2018</span>
+        </div>
+    </div>
+    <div class="small_margin">Worked in the dev team of a mobile digital payment application. Debugged Node.js API and built a prototype in React. Operated in a large codebase and loved working in a team. Received an offer to return and a recommendation letter.</div>
+<!--    <div class="small_margin collapsable">$$extended$$</div>-->
+</div>
+<div class="vertical medium_margin">
+    <div class="horizontal">
+        <span>
+            <span class="title">Vivid Vision</span>
+            <span>- Internship - Virtual Reality</span>
+        </span>
+        <div>
+            <span style="margin-right: 10px">San Francisco, USA</span>
+            <span>July 2018 - Aug 2018</span>
+        </div>
+    </div>
+    <div class="small_margin">Debugged vision testing software and developed therapeutic VR game in Unity C# for amblyopia patients.</div>
+<!--    <div class="small_margin collapsable">$$extended$$</div>-->
 </div>
             </div>
-            <div>
+            <div class="large_margin">
                 <h2>PROJECTS</h2>
-                <div class="vertical">
+                <div class="vertical medium_margin">
     <div class="horizontal">
-        <div>EDMO</div>
-        <div>Maastricht, NL  Sep 2023 - Feb 2024</div>
+        <div class="title">EDMO</div>
+        <div>
+            <span style="margin-right: 10px">Maastricht, NL</span>
+            <span>Sep 2023 - Feb 2024</span>
+        </div>
     </div>
-    <div>Designed novel data-passthrough joints and contributed to a ML algorithm for inferring a robot’s configuration.</div>
+    <div class="small_margin">Designed novel data-passthrough joints and contributed to a ML model for inferring a modular robot’s configuration.</div>
 </div>
-<div class="vertical">
+<div class="vertical medium_margin">
     <div class="horizontal">
-        <div>Open-source Laser Cutting Tool</div>
-        <div>Treviso, IT  Jan 2020 - Jan 2021</div>
+        <div class="title">Open-source Laser Cutting Tool</div>
+        <div>
+            <span style="margin-right: 10px">Treviso, IT</span>
+            <span>Jan 2020 - Jan 2021</span>
+        </div>
     </div>
-    <div>Built 3D printer and transformed it into a DIY laser cutter. Developed the open-source Python library svg-to-gcode. The tool’s GUI has garnered over 13,000 downloads and a community that helps maintain it.</div>
+    <div class="small_margin">Built 3D printer and transformed it into a DIY laser cutter. Developed the open-source Python library <a href='https://github.com/PadLex/SvgToGcode' target='_blank'>svg-to-gcode</a>. The tool’s GUI has garnered over 13,000 downloads and a community that helps maintain it.</div>
 </div>
             </div>
-            <div class="horizontal" style="justify-content: left; align-items: end">
+            <div class="horizontal large_margin" style="justify-content: left; align-items: end">
                 <h2>PASSIONATE</h2>
-                Hiking, Rock Climbing, Cooking, and Robotics
+                about hiking, rock climbing, cooking, and robotics. Board member in student association.
             </div>
     </div>
 </body>
