--- a/index_src.html
+++ b/index_src.html
@@ -10,36 +10,39 @@
     <div class="container">
         <div class="header">
             <h1>$$name$$</h1>
-            <div>%%info%%</div>
+            <div class="horizontal medium_margin">%%info%%</div>
+            <div class="small_margin"></div>
         </div>
-        <div class="horizontal">
+        <div class="middle horizontal large_margin">
             <div>
                 <h2>EDUCATION</h2>
                 %%education%%
             </div>
             <div>
                 <h2>LANGUAGES</h2>
+                <div class="medium_margin"></div>
                 %%languages%%
             </div>
             <div>
                 <h2>SKILLS</h2>
+                <div class="medium_margin"></div>
                 %%skills%%
             </div>
         </div>
-        <div class="vertical">
-            <div>
+        <div class="bottom vertical">
+            <div class="large_margin">
                 <h2>PUBLICATIONS</h2>
                 %%publications%%
             </div>
-            <div>
+            <div class="large_margin">
                 <h2>PROFESSIONAL EXPERIENCE</h2>
                 %%experience%%
             </div>
-            <div>
+            <div class="large_margin">
                 <h2>PROJECTS</h2>
                 %%projects%%
             </div>
-            <div class="horizontal" style="justify-content: left; align-items: end">
+            <div class="horizontal large_margin" style="justify-content: left; align-items: end">
                 <h2>PASSIONATE</h2>
                 $$passionate$$
             </div>
