Add links to papers and support for mobile

--- a/index_src.html
+++ b/index_src.html
@@ -10,10 +10,10 @@
     <div class="container">
         <div class="header">
             <h1>$$name$$</h1>
-            <div class="horizontal medium_margin">%%info%%</div>
+            <div class="horizontal medium_margin" style="row-gap: 1em">%%info%%</div>
             <div class="small_margin"></div>
         </div>
-        <div class="middle horizontal large_margin">
+        <div class="middle horizontal large_margin" style="row-gap: 1em">
             <div>
                 <h2>EDUCATION</h2>
                 %%education%%
