justify paragarphs and round down font size for print

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <span><span class='highlight'>NeurIPS 2024</span></span>
         </div>
     </div>
-    <div class="small_margin">Designed a system to generate novel board games in a DSL using a LLM as a mutation operator. Automated evaluation through play-through sampling between general game-playing agents, with heuristics to score runs.</div>
+    <div class="small_margin" style="text-align: justify">Designed a system to generate novel board games in a DSL using a LLM as a mutation operator. Automated evaluation through play-through sampling between general game-playing agents, with heuristics to score runs.</div>
 </div>
 <div class="vertical medium_margin">
     <div class="horizontal">
@@ -133,7 +133,7 @@
             <span>BNAIC 2024</span>
         </div>
     </div>
-    <div class="small_margin">For my BSc thesis, I explored whether existing PPO implementations designed for RLHF could instead train LLMs using rewards from explicitly programmed functions - e.g., quantifying if a generated program is efficient and correct.</div>
+    <div class="small_margin" style="text-align: justify">For my BSc thesis, I explored whether existing PPO implementations designed for RLHF could instead train LLMs using rewards from explicitly programmed functions - e.g., quantifying if a generated program is efficient and correct.</div>
 </div>
             </div>
             <div class="large_margin">
@@ -149,7 +149,7 @@
             <span>July 2024 - Sep 2024</span>
         </div>
     </div>
-    <div class="small_margin">Authored an internal paper and developed a prototype. Presented research to 60+ employees, gaining traction across departments with the potential to impact the next product cycle. Learned how to share complex ideas concisely.</div>
+    <div class="small_margin" style="text-align: justify">Authored an internal paper and developed a prototype. Presented research to 60+ employees, gaining traction across departments with the potential to impact the next product cycle. Learned how to share complex ideas concisely.</div>
 <!--    <div class="small_margin collapsable">This is a test</div>-->
 </div>
 <div class="vertical medium_margin">
@@ -163,7 +163,7 @@
             <span>Sep 2022 - Sep 2023</span>
         </div>
     </div>
-    <div class="small_margin">Developed Game Smith, a coding assistant for the Ludii DSL. Trained a LLM and overcome data scarcity using grammar-contrained decoding; developed compiler for incomplete code that sequentially excludes illegal tokens.</div>
+    <div class="small_margin" style="text-align: justify">Developed Game Smith, a coding assistant for the Ludii DSL. Trained a LLM and overcome data scarcity using grammar-contrained decoding; developed compiler for incomplete code that sequentially excludes illegal tokens.</div>
 <!--    <div class="small_margin collapsable">$$extended$$</div>-->
 </div>
 <div class="vertical medium_margin">
@@ -177,7 +177,7 @@
             <span>Nov 2021 - July 2024</span>
         </div>
     </div>
-    <div class="small_margin">Covered tuition and rent by serving as a university teaching assistant and tutoring privately in computer science.</div>
+    <div class="small_margin" style="text-align: justify">Covered tuition and rent by serving as a university teaching assistant and tutoring privately in computer science.</div>
 <!--    <div class="small_margin collapsable">$$extended$$</div>-->
 </div>
 <div class="vertical medium_margin">
@@ -191,7 +191,7 @@
             <span>Jun 2021 - Oct 2021</span>
         </div>
     </div>
-    <div class="small_margin">Built web interface currently used by glaucoma patients and their doctors to manage data and view test results. Worked with founders and dev team. Limited technical debt and managed state across complex React applications.</div>
+    <div class="small_margin" style="text-align: justify">Built web interface currently used by glaucoma patients and their doctors to manage data and view test results. Worked with founders and dev team. Limited technical debt and managed state across complex React applications.</div>
 <!--    <div class="small_margin collapsable">$$extended$$</div>-->
 </div>
 <div class="vertical medium_margin">
@@ -205,7 +205,7 @@
             <span>Nov 2018 - Aug 2019</span>
         </div>
     </div>
-    <div class="small_margin">Built and deployed a content-based image search engine. Mentored by Dr. Bolioli’s team, I trained BERT and Inception V3 to embed images and descriptions in a shared latent space. This project underpinned my high school thesis.</div>
+    <div class="small_margin" style="text-align: justify">Built and deployed a content-based image search engine. Mentored by Dr. Bolioli’s team, I trained BERT and Inception V3 to embed images and descriptions in a shared latent space. This project underpinned my high school thesis.</div>
 <!--    <div class="small_margin collapsable">$$extended$$</div>-->
 </div>
 <div class="vertical medium_margin">
@@ -219,7 +219,7 @@
             <span>Aug 2018 - Sep 2018</span>
         </div>
     </div>
-    <div class="small_margin">Worked in the dev team of a mobile digital payment application. Debugged Node.js API and built a prototype in React. Operated in a large codebase and loved working in a team. Received an offer to return and a recommendation letter.</div>
+    <div class="small_margin" style="text-align: justify">Worked in the dev team of a mobile digital payment application. Debugged Node.js API and built a prototype in React. Operated in a large codebase and loved working in a team. Received an offer to return and a recommendation letter.</div>
 <!--    <div class="small_margin collapsable">$$extended$$</div>-->
 </div>
 <div class="vertical medium_margin">
@@ -233,7 +233,7 @@
             <span>July 2018 - Aug 2018</span>
         </div>
     </div>
-    <div class="small_margin">Debugged vision testing software and developed therapeutic VR game in Unity C# for amblyopia patients.</div>
+    <div class="small_margin" style="text-align: justify">Debugged vision testing software and developed therapeutic VR game in Unity C# for amblyopia patients.</div>
 <!--    <div class="small_margin collapsable">$$extended$$</div>-->
 </div>
             </div>
@@ -247,7 +247,7 @@
             <span>Sep 2023 - Feb 2024</span>
         </div>
     </div>
-    <div class="small_margin">Designed novel data-passthrough joints and contributed to a ML model for inferring a modular robot’s configuration.</div>
+    <div class="small_margin" style="text-align: justify">Designed novel data-passthrough joints and contributed to a ML model for inferring a modular robot’s configuration.</div>
 </div>
 <div class="vertical medium_margin">
     <div class="horizontal">
@@ -257,12 +257,12 @@
             <span>Jan 2020 - Jan 2021</span>
         </div>
     </div>
-    <div class="small_margin">Built 3D printer and transformed it into a DIY laser cutter. Developed the open-source Python library <a href='https://github.com/PadLex/SvgToGcode' target='_blank'>svg-to-gcode</a>. The tool’s GUI has garnered over 13,000 downloads and a community that helps maintain it.</div>
+    <div class="small_margin" style="text-align: justify">Built 3D printer and transformed it into a DIY laser cutter. Developed the open-source Python library <a href='https://github.com/PadLex/SvgToGcode' target='_blank'>svg-to-gcode</a>. The tool’s GUI has garnered over 13,000 downloads and a community that helps maintain it.</div>
 </div>
             </div>
             <div class="horizontal large_margin" style="justify-content: left; align-items: end">
                 <h2>PASSIONATE</h2>
-                about hiking, rock climbing, cooking, and robotics. Board member in student association.
+                <span style="text-align: justify">about hiking, rock climbing, cooking, and robotics. Board member in student association.</span>
             </div>
     </div>
 </body>
