--- a/index_src.html
+++ b/index_src.html
@@ -44,7 +44,7 @@
             </div>
             <div class="horizontal large_margin" style="justify-content: left; align-items: end">
                 <h2>PASSIONATE</h2>
-                $$passionate$$
+                <span style="text-align: justify">$$passionate$$</span>
             </div>
     </div>
 </body>
